[gd_scene load_steps=9 format=3 uid="uid://hogcbrkjx0dc"]

[ext_resource type="Texture2D" uid="uid://deodhidschf76" path="res://Assets/Sprites/background.png" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://cx03ffxlsxrv2" path="res://Scenes/main.gd" id="1_jjvhh"]
[ext_resource type="PackedScene" uid="uid://bkjesv3midgf1" path="res://Scenes/player.tscn" id="2_bo1nx"]
[ext_resource type="FontFile" uid="uid://dlwraa1uvq2c6" path="res://Assets/Fonts/font.ttf" id="5_21xkr"]
[ext_resource type="AudioStream" uid="uid://lsqfujtjqrbj" path="res://Assets/Audios/music.mp3" id="5_kry3j"]
[ext_resource type="AudioStream" uid="uid://co3xabfufmrxi" path="res://Assets/Audios/dead.mp3" id="6_21xkr"]

[sub_resource type="LabelSettings" id="LabelSettings_6bp64"]
font = ExtResource("5_21xkr")

[sub_resource type="LabelSettings" id="LabelSettings_kry3j"]
font = ExtResource("5_21xkr")

[node name="main" type="Node2D"]
script = ExtResource("1_jjvhh")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(0, 360)
autoscroll = Vector2(0, 80)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
texture = ExtResource("1_jjgbg")
centered = false

[node name="player" parent="." instance=ExtResource("2_bo1nx")]
position = Vector2(96, 296)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kry3j")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 4.0
offset_right = 44.0
offset_bottom = 28.0
text = "0"
label_settings = SubResource("LabelSettings_6bp64")

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -14.0
offset_right = 52.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_kry3j")

[node name="GameOverSFX" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("6_21xkr")

[connection signal="player_died" from="player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
